Fix horizontal alignment for "Clear completed"

--- a/index.css
+++ b/index.css
@@ -325,7 +325,7 @@ body {
 html .clear-completed:active {
 	float: right;
 	position: relative;
-	line-height: 20px;
+	line-height: 19px;
 	text-decoration: none;
 	cursor: pointer;
 }
